; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jffs2/extr_nodelist.c_new_fragment.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jffs2/extr_nodelist.c_new_fragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jffs2_node_frag = type { %struct.jffs2_full_dnode*, i8*, i8* }
%struct.jffs2_full_dnode = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"cannot allocate a jffs2_node_frag object\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.jffs2_node_frag* (%struct.jffs2_full_dnode*, i8*, i8*)* @new_fragment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.jffs2_node_frag* @new_fragment(%struct.jffs2_full_dnode* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.jffs2_full_dnode*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.jffs2_node_frag*, align 8
  store %struct.jffs2_full_dnode* %0, %struct.jffs2_full_dnode** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call %struct.jffs2_node_frag* (...) @jffs2_alloc_node_frag()
  store %struct.jffs2_node_frag* %8, %struct.jffs2_node_frag** %7, align 8
  %9 = load %struct.jffs2_node_frag*, %struct.jffs2_node_frag** %7, align 8
  %10 = call i64 @likely(%struct.jffs2_node_frag* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %3
  %13 = load i8*, i8** %5, align 8
  %14 = load %struct.jffs2_node_frag*, %struct.jffs2_node_frag** %7, align 8
  %15 = getelementptr inbounds %struct.jffs2_node_frag, %struct.jffs2_node_frag* %14, i32 0, i32 2
  store i8* %13, i8** %15, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load %struct.jffs2_node_frag*, %struct.jffs2_node_frag** %7, align 8
  %18 = getelementptr inbounds %struct.jffs2_node_frag, %struct.jffs2_node_frag* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load %struct.jffs2_full_dnode*, %struct.jffs2_full_dnode** %4, align 8
  %20 = load %struct.jffs2_node_frag*, %struct.jffs2_node_frag** %7, align 8
  %21 = getelementptr inbounds %struct.jffs2_node_frag, %struct.jffs2_node_frag* %20, i32 0, i32 0
  store %struct.jffs2_full_dnode* %19, %struct.jffs2_full_dnode** %21, align 8
  br label %24

22:                                               ; preds = %3
  %23 = call i32 @JFFS2_ERROR(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %12
  %25 = load %struct.jffs2_node_frag*, %struct.jffs2_node_frag** %7, align 8
  ret %struct.jffs2_node_frag* %25
}

declare dso_local %struct.jffs2_node_frag* @jffs2_alloc_node_frag(...) #1

declare dso_local i64 @likely(%struct.jffs2_node_frag*) #1

declare dso_local i32 @JFFS2_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
